@@ -95,7 +95,10 @@ test_tags (const gchar * tag_str)
   g_object_set (G_OBJECT (videotestsrc), "num-buffers", 1, NULL);
 
   jpegenc = gst_element_factory_make ("jpegenc", "enc");
-  fail_unless (jpegenc != NULL);
+  if (jpegenc == NULL) {
+    g_print ("Cannot test - jpegenc not available\n");
+    return;
+  }
 
   metadatamux = gst_element_factory_make ("metadatamux", "mux");
   g_object_set (G_OBJECT (metadatamux), "exif", TRUE, NULL);
