@@ -1,3 +1,10 @@
+2008-10-11  Jan Schmidt  <jan.schmidt@sun.com>
+
+	* tests/check/pipelines/metadata.c:
+	Make the metadata test not fail when jpegenc isn't available....
+	as it isn't here, because it's not in this module, and
+	therefore not in the plugin path when the check runs.
+
 2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
 	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
